ui2022/src/app/pages/profile-page/components/profile-certificates/profile-certificates.component.scss
.table48 {
  vertical-align: inherit;
}

.boxShadow {
  box-shadow: 0 0 35px 25px var(--background);
  margin: 0 auto;
  background: var(--background);
}

.certificates {
  background-image: url(/assets/baumscheiben.jpg);
  background-size: cover;
  background-position: center;
}

.w-528 {
  max-width: 528px;
  margin: 0 auto;
}

textarea {
  font-family: 'Bull-mono' !important;
  font-size: 1rem;
}

table {
  th,
  td {
    font-size: 1rem;
  }
}

